# sounds-pathfinder

./: README.md
backend/: .env  Dockerfile  docker-compose.yml  pyproject.toml
backend/core/: main.py
backend/core/auth/: routers.py
backend/core/common/: bases.py  middlewares.py  routers.py
backend/core/config/: .env  settings.py
