[tool.poetry]
name = "sounds-pathfinder"
version = "0.1.0"
description = ""
authors = ["PanMartinez <marcinplotka88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
spotipy = "^2.21.0"
pytest = "^7.2.0"
mypy = "^0.991"
pydantic = "^1.10.4"
sqlalchemy = "^1.4.44"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
